<resources>
    <string name="app_name">Smart College</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="close_college">Close College</string>
    <string name="events">Events</string>
    <string name="id">ID</string>
    <string name="device_image">Device Image</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="Demo">Demo</string>
    <string name="room">Room</string>
    <string name="type">Type</string>
    <string name="isactive">isActive</string>
    <string name="eventid">EventID</string>
    <string name="date">Date</string>
    <string name="event_id">[EVENT ID]</string>
    <string name="event_date">[EVENT DATE]</string>
    <string name="todo">TODO</string>
    <string name="open_College">Open College</string>
    <string name="play">Play</string>
    <string name="system_status">[STATUS]</string>
    <string name="smart_college_security_is">Smart college security is:</string>
    <string name="not_triggered">NOT TRIGGERED</string>
</resources>
